--- a/viewpoints/editors-blog/posts/2023/06/13/how-do-people-feel-about-ai.qmd
+++ b/viewpoints/editors-blog/posts/2023/06/13/how-do-people-feel-about-ai.qmd
@@ -17,26 +17,26 @@ How do people feel about AI? That was a question recently explored in a survey o
 
 Researchers at the Ada Lovelace Institute and the Alan Turing Institute designed the survey to ask about specific AI use cases, rather than the concept of AI more broadly. Use cases included face recognition for policing, border control and security, targeted advertising for political campaigns and consumer products, virtual assistants, driverless cars, and so on.
 
-Roshni Modhvadia, a researcher at the Ada Lovelace Institute and member of the survey team, reported that respondents overall were broadly positive towards most of the use cases they were asked about. Healthcare applications (like using AI to assess the risk of cancer) or face recognition for border security were seen as very or somewhat beneficial by more than 80% of those surveyed. More than half of respondents thought that other applications, like virtual reality in education, climate research simulations, and robotic care assistants were very or somewhat beneficial. 
+Roshni Modhvadia, a researcher at the Ada Lovelace Institute and member of the survey team, reported that respondents overall were broadly positive towards most of the use cases they were asked about. Healthcare applications (using AI to assess the risk of cancer, for example) or face recognition for border security were seen as very or somewhat beneficial by more than 80% of those surveyed. More than half of respondents thought that other applications, such as virtual reality in education, climate research simulations, and robotic care assistants were very or somewhat beneficial. 
 
-Views were less positive towards applications like driverless cars, autonomous weapons and targeted advertising. These were the applications that respondents expressed most concern about, and in each of these cases perceived risks were felt to outweigh the perceived benefits of the technologies.
+Views were less positive towards applications including driverless cars, autonomous weapons and targeted advertising. These were the applications that respondents expressed most concern about, and for each of these use cases perceived risks were felt to outweigh perceived benefits.
 
 And yet, even for applications that were seen as being overwhelmingly beneficial -- assessing cancer risk and face recognition for border control -- respondents still expressed concern about the potential for overreliance on the technologies, the issue of who is accountable for mistakes, and the impact the technologies might have on jobs and employment opportunities.
 
-Almost two-thirds (62%) of respondents said laws and regulations would make them more comfortable with AI technologies being used -- an important finding, said Professor Helen Margetts, director of the public policy programme at The Alan Turing Institute, and professor of society and the internet at the University of Oxford, given where the national conversation around AI is at the moment. 
+Three-fifths (62%) of respondents said laws and regulations would make them more comfortable with AI technologies being used. This is an important finding given where the national AI conversation is at the moment, said Professor Helen Margetts, director of the public policy programme at The Alan Turing Institute. 
 
-That conversation, of course, has been fuelled by the success of ChatGPT and the growing adoption of generative AI tools. This survey, fielded in November 2022, did not ask about ChatGPT *et al.*, but does at least provide a baseline against which to measure any shifts in attitudes brought on by what Professor Shannon Vallor, Baillie Gifford Chair in the Ethics of Data and Artificial Intelligence at the Edinburgh Futures Institute at the University of Edinburgh, described as "this latest round of AI hype and confusion".
+The current national conversation has been fuelled by the success of ChatGPT and the growing adoption of generative AI tools. The Lovelace/Turing survey, fielded in November 2022, did not ask about ChatGPT *et al.*, but the results do at least provide a baseline against which to measure any shifts in attitudes brought on by what Professor Shannon Vallor, Baillie Gifford Chair in the Ethics of Data and Artificial Intelligence at the Edinburgh Futures Institute at the University of Edinburgh, described as "this latest round of AI hype and confusion".
 
-(For more on that theme, see Michael Timothy Bennett's recent article, ["No, AI probably won’t kill us all -- and there’s more to this fear campaign than meets the eye"](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html).)
+- For more on that theme, see Michael Timothy Bennett's recent article, ["No, AI probably won’t kill us all -- and there’s more to this fear campaign than meets the eye"](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html).
 
 Modhvadia, Margetts and Vallor were speaking at an online event last week to mark the launch of the survey report. Video of the event is below. The [full report](https://www.adalovelaceinstitute.org/report/public-attitudes-ai/) is available from the Ada Lovelace Institute website.
 
 {{< video https://www.youtube.com/embed/sUG6y_E2UD4 >}}
 
 ## How do people feel about AI in statistics and data science education?
-A new paper in the *Journal of Statistics and Data Science Education* considers the potential for using ChatGPT in statistics and data science classrooms. Authors Amanda R. Ellis and Emily Slade, of the University of Kentucky, give suggestions for using ChatGPT to generate course content: lecture notes and new material such as practice quizzes or exam questions, or pseudocode for introducing students to statistical programming. It could also be used as a code debugging tool, and could be integrated into set tasks -- e.g., have students prompt ChatGPT to write code, then run the code, then assess whether the code works as intended.
+A new paper in the *Journal of Statistics and Data Science Education* considers the potential for using ChatGPT in statistics and data science classrooms. Authors Amanda R. Ellis and Emily Slade of the University of Kentucky give suggestions for using ChatGPT to generate course content: lecture notes and new material such as practice quizzes or exam questions, or pseudocode for introducing students to statistical programming. It could also be used as a code debugging tool and integrated into set tasks -- e.g., have students prompt ChatGPT to write code, then run the code themselves and assess whether the code works as intended.
 
-"We recognize that educators have valid concerns regarding the implementation and integration of AI tools in the classroom," write the authors, before going on to say that: "We encourage readers to consider other technologies, such as the calculator, WolframAlpha, and Wikipedia, all of which were met with initial wariness but are now commonly used as learning tools. As statistics and data science educators, we can actively shape and guide the incorporation of AI tools within our classrooms."
+"We recognize that educators have valid concerns regarding the implementation and integration of AI tools in the classroom," write the authors, later adding that: "We encourage readers to consider other technologies, such as the calculator, WolframAlpha, and Wikipedia, all of which were met with initial wariness but are now commonly used as learning tools. As statistics and data science educators, we can actively shape and guide the incorporation of AI tools within our classrooms."
 
 **Read the paper:** [A new era of learning: Considerations for ChatGPT as a tool to enhance statistics and data science education](https://amstat.tandfonline.com/doi/full/10.1080/26939169.2023.2223609)
 
