--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!london-data-week.qmd"
+    - "!how-do-people-feel-about-ai.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/06/08/london-data-week.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/06/13/how-do-people-feel-about-ai.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## London Data Week is almost here. What’s it all about?
-The first ever London Data Week runs from 3–9 July 2023. Real World Data Science meets with organisers Sam Nutt and Jennifer Ding to hear about their vision and plans for the week, and a selection of activities to look forward to.
+## How do people feel about AI? Well, it's complicated
+A new survey from the Ada Lovelace Institute and the Alan Turing Institute finds broadly positive views towards AI use cases in healthcare and border security, among others, but people are also concerned about the dangers of overreliance on the technologies and a lack of clarity around accountability.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/06/08/images/arthur-yao-HTicW9-i4xY-unsplash.png)
+![](viewpoints/editors-blog/posts/2023/06/13/images/andy-kelly-0E_vhMVqL9g-unsplash.png)
 :::
 :::
 
