--- a/ideas/index.qmd
+++ b/ideas/index.qmd
@@ -16,4 +16,4 @@ listing:
   page-size: 30
   feed: true
 ---
-
+Our ideas content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd).
