--- a/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
@@ -8,7 +8,7 @@ categories:
   - Coding
   - Collaboration
 author: Davit Svanidze and Andre Python
-date: 05/XX/2023
+date: 06/15/2023
 toc: true
 # image: images/google-deepmind-52afknBiUk4-unsplash.png
 # image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
