--- a/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
@@ -7,26 +7,17 @@ categories:
   - Reproducibility
   - Coding
   - Collaboration
-author: Davit Svanidze and Andre Python
+author: Davit Svanidze, Andre Python, et al.
 date: 06/15/2023
 toc: true
-# image: images/google-deepmind-52afknBiUk4-unsplash.png
+image: images/intro.png
 # image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
-format:
-  html:
-    embed-resources: true
 ---
-:::{layout-ncol=3}
-![](images/header-1.png)
-
-![](images/header-2.png)
-
-![](images/header-3.jpg)
-:::
+![](images/header.png)
 
 Reproducibility, or “[the ability of a researcher to duplicate the results of a prior study using the same materials as the original investigator](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”, is critical for sharing and building upon scientific findings. Reproducibility not only verifies the correctness of processes leading to results but also serves as a prerequisite for assessing generalizability to other datasets or contexts. This we refer to as replicability, or “[the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but new data are collected](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”. Reproducibility, which is the focus of our work here, can be challenging -- especially in the context of deep learning. This article, and associated material, aims to provide practical advice for overcoming these challenges. 
 
-Our story begins with Davit Svanidze, a master's degree student in economics at the London School of Economics (LSE). Davit's efforts to make his bachelor's thesis reproducible is what inspires this article, and we hope that other students will be able to learn from Davit's experience and apply those learnings to their own work. Davit will demonstrate the use of Jupyter notebooks, GitHub, and other relevant tools to ensure reproducibility. He will walk us through code documentation, data management, and version control with Git. And, he will share best practices for collaboration, peer review, and dissemination of results.
+Our story begins with Davit Svanidze, a master's degree student in economics at the London School of Economics (LSE). Davit's efforts to make his bachelor's thesis reproducible is what inspires this article, and we hope that readers will be able to learn from Davit's experience and apply those learnings to their own work. Davit will demonstrate the use of Jupyter notebooks, GitHub, and other relevant tools to ensure reproducibility. He will walk us through code documentation, data management, and version control with Git. And, he will share best practices for collaboration, peer review, and dissemination of results.
 
 Davit's story starts here, but there is much more for the interested reader to discover. At certain points in this article, we will direct readers to other resources, namely a [Jupyter notebook](http://c100-159.cloud.gwdg.de:9009/lab/workspaces/auto-8/tree/notebooks/main.ipynb) and [GitHub repository](https://github.com/dsvanidze/replicability) which contain all the instructions, data and code necessary to reproduce Davit's research. Together, these components offer a comprehensive overview of the thought process and technical implementation required for reproducibility. While there is no one-size-fits-all approach, the principles remain consistent.
 
@@ -55,7 +46,7 @@ except FileNotFoundError:
 ```
 ![](images/hardcoded-paths-1.gif)
 
-If the hardcoded file path -- `"/user/notebooks/toydata.csv"` -- exists on the machine being used, the code will run just fine. But, when run in a different environment without said path, the code will result in a `"File not found error"`. Better code that uses relative paths can be written as:
+In the code above, a dummy file (toydata.csv) is used. The dummy data contains three different toys with their prices, but only the path of the file is relevant to this example. If the hardcoded file path -- `"/user/notebooks/toydata.csv"` -- exists on the machine being used, the code will run just fine. But, when run in a different environment without said path, the code will result in a `"File not found error"`. Better code that uses relative paths can be written as:
 
 ```{{python}}
 # Relative path
@@ -149,7 +140,7 @@ else:
 
 ![](images/hardcoded-paths-4.gif)
 
-Here, the paths are stored with other model details (line 5--6, first cell). Therefore, we can use them as variables when we need them (e.g. line 15, first cell, and line 6, second cell). Now, when the current model is set to `“model1”`, everything is automatically adjusted. Also, if the path details need to be changed, we only need to change them once and everything else is automatically adjusted and updated. The code now correctly states that `“model1”` performs worse than the benchmark and is therefore rejected and we should keep `“model2”`, which performs best. 
+Here, the paths are stored with other model details (line 5--6, first cell). Therefore, we can use them as variables when we need them (e.g., line 15, first cell, and line 6, second cell). Now, when the current model is set to `“model1”`, everything is automatically adjusted. Also, if the path details need to be changed, we only need to change them once and everything else is automatically adjusted and updated. The code now correctly states that `“model1”` performs worse than the benchmark and is therefore rejected and we should keep `“model2”`, which performs best. 
 
 I managed to catch this error in time, but it often can be difficult to spot our own mistakes. That is why making code available to others is crucial. A code review by a second (or third) pair of eyes can save everyone a lot of time and avoid spreading incorrect results and conclusions.
 
@@ -169,7 +160,7 @@ An example of a Dockerfile.
 In this example, by downloading the project, including the Dockerfile, anyone can run `main.py` without installing packages and worrying what OS was used for development or which Python version should be installed. You can view Docker as a great robot chef: show it a recipe (Dockerfile), provide the ingredients (project files), push the start button (to build the container) and wait to sample the results.
 
 ### Why does nobody check your code?
-Even after implementing Docker, I still faced another challenge to reproducibility: making the verification process for my code easy enough that it could be done by anyone, without them needing a degree in computer science! Increasingly, there is an expectation for researchers to share their code so that results can be reproduced, but there are, as yet, no widely accepted or enforced standards on how to make code readable and reusable. However, if we are to embrace the concept of reproducibility, we must write and publish code under the assumption that someone, somewhere -- boss, team member, journal reviewer, reader -- will want to rerun our code. And, if we expect that someone will want to rerun our code (and hopefully check it), we should ensure that the code is readable and does not take too long to run.
+Even after implementing Docker, I still faced another challenge to reproducibility: making the verification process for my code easy enough that it could be done by anyone, without them needing a degree in computer science! Increasingly, there is an expectation for researchers to share their code so that results can be reproduced, but there are as yet no widely accepted or enforced standards on how to make code readable and reusable. However, if we are to embrace the concept of reproducibility, we must write and publish code under the assumption that someone, somewhere -- boss, team member, journal reviewer, reader -- will want to rerun our code. And, if we expect that someone will want to rerun our code (and hopefully check it), we should ensure that the code is readable and does not take too long to run.
 
 If your code *does* take too long to run, some operations can often be accelerated -- for example, by reducing the size of the datasets or by implementing computationally efficient data processing approaches (e.g., using [PyTorch](https://pytorch.org/)). Aim for a running time of a few minutes -- or about as long as it takes to make a cup of tea or coffee. Of course, if data needs to be reduced to save computational time, the person rerunning your code won’t generate the same results as in your original analysis. This therefore will not lead to reproducibility, *sensu stricto*. However, as long as you state clearly what are the expected results from the reduced dataset, your peers can at least inspect your code and offer feedback, and this marks a step towards reproducibility. 
 
@@ -203,9 +194,9 @@ with open(Path("../../all/notebooks/toydata.csv"), "r") as f:
 The extra Python package, `pathlib`, is of course unnecessary if you build a Docker container for your project, as discussed [in the previous section](#solving-compatibility-chaos-with-docker).
 
 ### Jupyter, King of the Notebooks
-By this stage in my project, I was feeling that I'd made good progress towards ensuring that my work would be reproducible. I'd expended a lot of effort to make my code readable, efficient, and also absent of bugs (or, at least, this is what I was hoping for). I'd also built a Docker container to allow others to replicate my computing environment and rerun the analysis. But, still I wanted to make sure there were no barriers that would prevent people -- my supervisors, in particular -- from being able to review the work I had done for my undergraduate thesis. What I wanted was a way to present a complete narrative of my project that was easy to understand and follow. For this, I turned to Jupyter Notebook.
+By this stage in my project, I was feeling that I'd made good progress towards ensuring that my work would be reproducible. I'd expended a lot of effort to make my code readable, efficient, and also absent of bugs (or, at least, this is what I was hoping for). I'd also built a Docker container to allow others to replicate my computing environment and rerun the analysis. Still, I wanted to make sure there were no barriers that would prevent people -- my supervisors, in particular -- from being able to review the work I had done for my undergraduate thesis. What I wanted was a way to present a complete narrative of my project that was easy to understand and follow. For this, I turned to Jupyter Notebook.
 
-![](images/jupyter.png){width="500px" fig-align="center"}
+![](images/jupyter.png){fig-align="center"}
 
 ::: {.figure-caption style="text-align: center;"}
 **Credit:** Discord software, Midjourney bot.
@@ -233,7 +224,7 @@ So far, this article has dealt with barriers to reproducibility -- and ways arou
 
 One of the challenges for research projects employing machine learning and deep learning algorithms is that their outputs can be influenced by their inherent randomness. Consider the four portraits below, generated by the Midjourney bot. 
 
-![](images/DL_bkg.png){width="500px" fig-align="center"}
+![](images/DL_bkg.png){fig-align="center"}
 
 ::: {.figure-caption style="text-align: center;"}
 **Credit:** Discord software, Midjourney bot.
@@ -245,7 +236,7 @@ Randomness is not necessarily a bad thing -- it mitigates overfitting and helps 
 
 There are many elements of an analysis in which randomness may be present and lead to different results. For example, in a classification (where your dependent variable is binary, e.g., success/failure with 1 and 0) or a regression (where your dependent variable is continuous, e.g., temperature measurements of 10.1°C, 2.8°C, etc.), you might need to split your data into training and testing sets. The training set is used to estimate the model (hyper)parameters and the testing set is used to compute the performance of the model. The way the split is usually operationalized is as a random selection of rows of your data. So, in principle, each time you split your data into training and testing sets, you may end up with different rows in each set. Differences in the training set may therefore lead to different values of the model (hyper)parameters and affect the predictive performance that is measured from the testing set. Also, differences in the testing set may lead to variations in the predictive performance scores, which in turn lead to potentially different interpretations and, ultimately, decisions if the results are used for that purpose.
 
-This aspect of randomness in the training of models is relatively well known. But randomness may hide in other parts of code. One such example is illustrated below. Here, using Python, we set the seed number to 0 using `np.random.seed(seed value)`. The `random.seed()` function from the package `numpy` (abbreviated `np`) saves the state of a random function so that it can create identical random numbers independently of the machine you use, and this is for any number of executions. A seed value is an initial input or starting point used by a pseudorandom number generator to generate a sequence of random numbers. It is often an integer or a timestamp. The number generator takes this seed value and uses it to produce a deterministic series of random numbers that appear to be random, but can be recreated by using the same seed value. Without providing this seed value, the first execution of the function typically uses the current system time. The animation below generates two random arrays `arr1` and `arr2` using `np.random.rand(3,2)`. Note that the values `3,2` indicate that we want random values for an array that has 3 rows and 2 columns.
+This aspect of randomness in the training of models is relatively well known. But randomness may hide in other parts of code. One such example is illustrated below. Here, using Python, we set the seed number to 0 using `np.random.seed(seed value)`. The `random.seed()` function from the package `numpy` (abbreviated `np`) saves the state of a random function so that it can create identical random numbers independently of the machine you use, and this is for any number of executions. A seed value is an initial input or starting point used by a pseudorandom number generator to generate a sequence of random numbers. It is often an integer or a timestamp. The number generator takes this seed value and uses it to produce a deterministic series of random numbers that appear to be random but can be recreated by using the same seed value. Without providing this seed value, the first execution of the function typically uses the current system time. The animation below generates two random arrays `arr1` and `arr2` using `np.random.rand(3,2)`. Note that the values `3,2` indicate that we want random values for an array that has 3 rows and 2 columns.
 
 ```{{python}}
 import numpy as np
@@ -289,9 +280,10 @@ This short code demonstrates how randomness that can be controlled by the seed v
 ## Conclusion
 We hope you have enjoyed learning more about our quest for reproducibility. We have explained why reproducibility matters and provided tips for how to achieve it -- or, at least, work towards it. We have introduced a few important issues that you are likely to encounter on your own path to reproducibility. In sum, we have mentioned:
 
+-   The importance of having relative instead of hard-coded paths in code. 
 -   Operating system compatibility issues, which can be solved by using Docker containers for a consistent computing environment.
--   The convenience of Jupyter notebooks for code editing -- particularly useful for data science projects and work using deep learning because of the ability to include text and code in the same document, and make the work accessible to everyone (so long as they have an internet connection).
--   The need for version control using, for example, Git and Github, which allows you to keep track of changes in your code and collaborate with others efficiently.
+-   The convenience of Jupyter notebooks for code editing -- particularly useful for data science projects and work using deep learning because of the ability to include text and code in the same document and make the work accessible to everyone (so long as they have an internet connection).
+-   The need for version control using, for example, Git and GitHub, which allows you to keep track of changes in your code and collaborate with others efficiently.
 -   The importance of setting the seed values in random number generators.
 
 The graphic below provides a visual overview of the different components of our study and shows how each component works with the others to support reproducibility.
@@ -312,12 +304,12 @@ And, with that, we wish you all the best on your own quest for reproducibility!
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the authors
-: **Davit Svanidze** is a master's degree student in economics at the London School of Economics (LSE). **Andre Python** is a young professor and doctoral supervisor at Zhejiang University's Center for Data Science.
+: **Davit Svanidze** is a master's degree student in economics at the London School of Economics (LSE). **Andre Python** is a young professor of statistics at Zhejiang University’s Center for Data Science. **Christoph Weisser** is a senior data scientist at BASF. **Benjamin Säfken** is professor of statistics at TU Clausthal. **Thomas Kneib** is professor of statistics and dean of research at the Faculty of Business and Economic Sciences at Goettingen University. **Junfen Fu** is professor of pediatrics, chief physician and director of the Endocrinology Department of Children's Hospital, Zhejiang University, School of Medicine. 
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-: &copy; 2023 Davit Svanidze and Andre Python
+: &copy; 2023 Davit Svanidze, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.  
 
@@ -325,7 +317,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Svanidze, Davit, and Andre Python. 2023. "A demonstration of the law of the flowering plants." Real World Data Science, April 13, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/05/XXX/making-DL-reproducible.html)
+: Svanidze, Davit, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 2023. "Making deep learning algorithms reproducible: the devil is in the detail." Real World Data Science, April 13, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/06/15/making-DL-reproducible.html)
 :::
 :::
 :::
