--- a/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
@@ -12,6 +12,7 @@ date: 06/15/2023
 toc: true
 image: images/intro.png
 # image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
+section-title-footnotes: References
 ---
 ![](images/header.png)
 
@@ -23,7 +24,9 @@ Davit's story starts here, but there is much more for the interested reader to d
 
 ## Davit’s journey towards reproducibility
 ### More power, please
-The focus of my bachelor thesis was to better understand the initial spread of Covid-19 in China using deep learning algorithms. I was concerned about making my work reproducible, but not only for my own sake. The "reproducibility crisis" is a well-documented problem in science as a whole [1--4](link), with studies suggesting that around one-third of social science studies published between the years 2010 and 2015 in top journals like *Nature* and *Science* could not be reproduced. [5](link) Results that cannot be reproduced are not necessarily “wrong”. But, if findings cannot be reproduced, we cannot be sure of their validity.
+The focus of my bachelor thesis was to better understand the initial spread of Covid-19 in China using deep learning algorithms. I was concerned about making my work reproducible, but not only for my own sake. The "reproducibility crisis" is a well-documented problem in science as a whole [1--4](link),[^1] with studies suggesting that around one-third of social science studies published between the years 2010 and 2015 in top journals like *Nature* and *Science* could not be reproduced. [5](link) Results that cannot be reproduced are not necessarily “wrong”. But, if findings cannot be reproduced, we cannot be sure of their validity.
+
+[^1]: Test
 
 For [my own research project](http://c100-159.cloud.gwdg.de:9009/lab/workspaces/auto-G/tree/notebooks/main.ipynb), I gathered all data and started working on my computer. After I built the algorithms to train the data, my first challenge to reproducibility was computational. I realized that training models on my local computer was taking far too long, and I needed a faster, more powerful solution to be able to submit my thesis in time. Fortunately, I could access the university server to train the algorithms. Once the training was complete, I could generate the results on my local computer, since producing maps and tables was not so demanding. However...
 
