--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -16,6 +16,7 @@ toc: true
 filters:
   - lightbox
 lightbox: auto
+link-bibliography: true
 ---
 This tutorial will demonstrate a popular method for predicting the day a flower will bloom. There are many reasons why you might want to predict a bloom date. You might be a scientist studying ecosystems stressed by climate change. Or you might be planning a trip to Amsterdam and would like to time your stay to when the tulips are in bloom. Or maybe you are participating in the annual [Cherry Blossom Prediction Competition](https://competition.statistics.gmu.edu/) and want some ideas to help you get started.
 
