--- a/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
@@ -313,6 +313,10 @@ And, with that, we wish you all the best on your own quest for reproducibility!
 About the authors
 : **Davit Svanidze** is a master's degree student in economics at the London School of Economics (LSE). **Andre Python** is a young professor of statistics at Zhejiang University’s Center for Data Science. **Christoph Weisser** is a senior data scientist at BASF. **Benjamin Säfken** is professor of statistics at TU Clausthal. **Thomas Kneib** is professor of statistics and dean of research at the Faculty of Business and Economic Sciences at Goettingen University. **Junfen Fu** is professor of pediatrics, chief physician and director of the Endocrinology Department of Children's Hospital, Zhejiang University, School of Medicine. 
 :::
+::: {.g-col-12 .g-col-md-12}
+Acknowledgement
+: Andre Python has been funded by the National Natural Science Foundation of China (82273731), the National Key Research and Development Program of China (2021YFC2701905) and Zhejiang University global partnership fund (188170-11103).
+:::
 
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
@@ -324,7 +328,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Svanidze, Davit, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 2023. "Making deep learning algorithms reproducible: the devil is in the detail." Real World Data Science, April 13, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/06/15/making-DL-reproducible.html)
+: Svanidze, Davit, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 2023. "Making deep learning algorithms reproducible: the devil is in the detail." Real World Data Science, June 15, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/06/15/making-DL-reproducible.html)
 :::
 :::
 :::
