last section checked

--- a/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/06/15/making-DL-reproducible.qmd
@@ -282,7 +282,7 @@ arr2 = np.random.rand(3,2)
 
 Here, the values of `arr1` and `arr2` will be different each time we run the code since the seed value was not set and is therefore changing over time. 
 
-This short code demonstrates how randomness that can be controlled by the seed value may affect your code. Therefore, unless randomness is required, e.g., to get some uncertainty in the results, setting the seed value will contribute to making your work reproducible. I also find it helpful to document the seed number I use in my code so that I can easily reproduce my findings in the future. If you are currently working on some code that involves random number generators, it might be worth checking your code and making all necessary changes. In our work (see Code chunk 9 in [the Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb)) we set the `seed value` in a general way, using a framework (config) so that our code always uses the same seed to train our algorithm.
+This short code demonstrates how randomness that can be controlled by the seed value may affect your code. Therefore, unless randomness is required, e.g., to get some uncertainty in the results, setting the seed value will contribute to making your work reproducible. I also find it helpful to document the seed number I use in my code so that I can easily reproduce my findings in the future. If you are currently working on some code that involves random number generators, it might be worth checking your code and making all necessary changes. In our work (see code chunk 9 in [the Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb)) we set the `seed value` in a general way, using a framework (config) so that our code always uses the same seed to train our algorithm.
 
 ## Conclusion
 We hope you have enjoyed learning more about our quest for reproducibility. We have explained why reproducibility matters and provided tips for how to achieve it -- or, at least, work towards it. We have introduced a few important issues that you are likely to encounter on your own path to reproducibility. In sum, we have mentioned:
@@ -301,7 +301,7 @@ We use (A) the version control system, Git, and its hosting service, GitHub, whi
 
 Now, it is over to you. Our [Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb) provides a walkthrough of our research. Our [GitHub repository](https://github.com/dsvanidze/replicability) has all the data, code and other files you need to reproduce our work, and this [README file](https://github.com/dsvanidze/replicability#readme) will help you get started.
 
-And, with that, we wish you all the best on your own quest for reproducibility!
+And with that, we wish you all the best on the road to reproducibility!
 
 ::: {.article-btn}
 [Find more case studies](/case-studies/index.qmd)
