--- a/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
+++ b/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
@@ -16,7 +16,7 @@ section-title-footnotes: References
 ---
 Reproducibility, or “[the ability of a researcher to duplicate the results of a prior study using the same materials as the original investigator](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”, is critical for sharing and building upon scientific findings. Reproducibility not only verifies the correctness of processes leading to results but also serves as a prerequisite for assessing generalisability to other datasets or contexts. This we refer to as replicability, or “[the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but new data are collected](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”. Reproducibility, which is the focus of our work here, can be challenging -- especially in the context of deep learning. This article, and associated material, aims to provide practical advice for overcoming these challenges. 
 
-Our story begins with Davit Svanidze, a master's degree student in economics at the London School of Economics (LSE). Davit's efforts to make his bachelor's thesis reproducible is what inspires this article, and we hope that readers will be able to learn from Davit's experience and apply those learnings to their own work. Davit will demonstrate the use of Jupyter notebooks, GitHub, and other relevant tools to ensure reproducibility. He will walk us through code documentation, data management, and version control with Git. And, he will share best practices for collaboration, peer review, and dissemination of results.
+Our story begins with Davit Svanidze, a master's degree student in economics at the London School of Economics (LSE). Davit's efforts to make his bachelor's thesis reproducible are what inspires this article, and we hope that readers will be able to learn from Davit's experience and apply those learnings to their own work. Davit will demonstrate the use of Jupyter notebooks, GitHub, and other relevant tools to ensure reproducibility. He will walk us through code documentation, data management, and version control with Git. And, he will share best practices for collaboration, peer review, and dissemination of results.
 
 Davit's story starts here, but there is much more for the interested reader to discover. At certain points in this article, we will direct readers to other resources, namely a [Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb) and [GitHub repository](https://github.com/dsvanidze/replicability) which contain all the instructions, data and code necessary to reproduce Davit's research. Together, these components offer a comprehensive overview of the thought process and technical implementation required for reproducibility. While there is no one-size-fits-all approach, the principles remain consistent.
 
@@ -29,7 +29,7 @@ Davit's story starts here, but there is much more for the interested reader to d
 
 ## Davit’s journey towards reproducibility
 ### More power, please
-The focus of my bachelor's thesis was to better understand the initial spread of Covid-19 in China using deep learning algorithms. I was concerned about making my work reproducible, but not only for my own sake. The "reproducibility crisis" is a well-documented problem in science as a whole,[^1] [^2] [^3] [^4] with studies suggesting that around one-third of social science studies published between the years 2010 and 2015 in top journals like *Nature* and *Science* could not be reproduced.[^5] Results that cannot be reproduced are not necessarily “wrong”. But, if findings cannot be reproduced, we cannot be sure of their validity.
+The focus of my bachelor's thesis was to better understand the initial spread of Covid-19 in China using deep learning algorithms. I was keen to make my work reproducible, but not only for my own sake. The "reproducibility crisis" is a well-documented problem in science as a whole,[^1] [^2] [^3] [^4] with studies suggesting that around one-third of social science studies published between the years 2010 and 2015 in top journals like *Nature* and *Science* could not be reproduced.[^5] Results that cannot be reproduced are not necessarily “wrong”. But, if findings cannot be reproduced, we cannot be sure of their validity.
 
 [^1]: Peng, Roger D. 2011. "Reproducible Research in Computational Science." *Science* 334 (6060): 1226--1227.
 [^2]: Ioannidis, John P. A., Sander Greenland, Mark A. Hlatky, Muin J. Khoury, Malcolm R. Macleod, David Moher, Kenneth F. Schulz, and Robert Tibshirani. 2014. "Increasing Value and Reducing Waste in Research Design, Conduct, and Analysis." *The Lancet* 383 (9912): 166--175.
@@ -75,7 +75,7 @@ except FileNotFoundError:
 
 ![](images/hardcoded-paths-2.gif)
 
-You can see that this code has successfully imported data from the dataset `toydata.csv` and printed its two columns (toy and price) and 3 rows. 
+You can see that this code has successfully imported data from the dataset `toydata.csv` and printed its two columns (toy and price) and three rows. 
 
 The following example is a simplified version of what happened when I wrote code to train several models, store the results and run a procedure to compare results with the predictive performance of a benchmark model:
 
@@ -114,7 +114,7 @@ else:
 
 Everything looks fine at a glance. But, if you examine the code carefully, you may spot the problem. Initially, when I coded the procedure (training the model, saving and loading the results), I hardcoded the paths and had to change them for each tested model. First, I trained `model2`, a complex model, and tested it against the benchmark (70 > 50 &rarr; accepted). I repeated the procedure for `model1` (a simple model). Its result was identical to `model2`, therefore I kept `model1` following the [parsimony principle](https://www.sciencedirect.com/topics/computer-science/parsimony-principle).
 
-However, for the code line loading the result for the current model (line 5, second cell), I forgot to amend the path and so mistakenly loaded the result of `model2`. As a result, I accepted a model which should have been rejected. These wrong results were then spread further in the code, including all charts and maps and the conclusions of my analysis.
+However, for the code line loading the result for the current model (line 5, second cell), I forgot to amend the path and so mistakenly loaded the result of `model2`. As a consequence, I accepted a model which should have been rejected. These wrong results were then spread further in the code, including all charts and maps and the conclusions of my analysis.
 
 A small coding error like this can therefore be fatal to an analysis. Below is the corrected code:
 
@@ -152,7 +152,7 @@ else:
 
 ![](images/hardcoded-paths-4.gif)
 
-Here, the paths are stored with other model details (line 5--6, first cell). Therefore, we can use them as variables when we need them (e.g., line 15, first cell, and line 6, second cell). Now, when the current model is set to `model1`, everything is automatically adjusted. Also, if the path details need to be changed, we only need to change them once and everything else is automatically adjusted and updated. The code now correctly states that `model1` performs worse than the benchmark and is therefore rejected and we should keep `model2`, which performs best. 
+Here, the paths are stored with other model details (line 7--8, first cell). Therefore, we can use them as variables when we need them (e.g., line 16, first cell, and line 5, second cell). Now, when the current model is set to `model1` (line 11, first cell), everything is automatically adjusted. Also, if the path details need to be changed, we only need to change them once and everything else is automatically adjusted and updated. The code now correctly states that `model1` performs worse than the benchmark and is therefore rejected and we should keep `model2`, which performs best. 
 
 I managed to catch this error in time, but it often can be difficult to spot our own mistakes. That is why making code available to others is crucial. A code review by a second (or third) pair of eyes can save everyone a lot of time and avoid spreading incorrect results and conclusions.
 
@@ -219,7 +219,7 @@ Jupyter notebooks combine [Markdown text](https://www.markdownguide.org/cheat-sh
 While creating my notebook, I was able to experiment with my code and iterate quickly. Code cells within a document can be run interactively, which allowed me to try out different approaches to solving a problem and see the results almost in real time. I could also get feedback from others and try out new ideas without having to spend a lot of time writing and debugging code.
 
 ### Version control with Git and GitHub
-My Jupyter notebook and associated folders and files are all available via [GitHub](https://github.com/dsvanidze/replicability). [Git](https://git-scm.com/) is a version control system that allows you to keep track of changes to your code over time, while GitHub is a web-based platform that provides a central repository for storing and sharing code. With Git and GitHub, I was able to version my code and collaborate with others without the risk of losing any work. I really couldn’t afford to re-do the entire year I spent on my dissertation!
+My Jupyter notebook and associated folders and files are all available via [GitHub](https://github.com/dsvanidze/replicability). [Git](https://git-scm.com/) is a version control system that allows you to keep track of changes to your code over time, while GitHub is a web-based platform that provides a central repository for storing and sharing code. With Git and GitHub, I was able to version my code and collaborate with others without the risk of losing any work. I really couldn’t afford to redo the entire year I spent on my dissertation!
 
 Git and GitHub are great for reproducibility. By sharing code via these platforms, others can access your work, verify it and reproduce your results without risking changing or, worse, destroying your work -- whether partially or completely. These tools also make it easy for others to build on your work if they want to further develop your research. You can also use Git and GitHub to share or promote your results across a wider community. The ability to easily store and share your code also makes it easy to keep track of the different versions of your code and to see how your work has evolved.
 
@@ -232,9 +232,9 @@ A simple example of GitHub version tracking.
 :::
 
 ## The deep learning challenge
-So far, this article has dealt with barriers to reproducibility -- and ways around them -- that will apply to most, if not all, modern research projects. While I'd encourage any scientist to adopt these practices in their own work, it is important to stress that these alone cannot guarantee reproducibility. In cases where standard statistical procedures are used within statistical software packages, reproducibility is often achievable. However, in reality, even when following the same procedures, differences in outputs can occur, and identifying the causes may be challenging. Cooking offers a simple analogy: subtle changes in room temperature or ingredient quality from one day to the next can impact the final product.
+So far, this article has dealt with barriers to reproducibility -- and ways around them -- that will apply to most, if not all, modern research projects. While I'd encourage any scientist to adopt these practices in their own work, it is important to stress that these alone cannot guarantee reproducibility. In cases where standard statistical procedures are used within statistical software packages, reproducibility is often achievable. However, in reality, even when following the same procedures, differences in outputs can occur, and identifying the reasons for this may be challenging. Cooking offers a simple analogy: subtle changes in room temperature or ingredient quality from one day to the next can impact the final product.
 
-One of the challenges for research projects employing machine learning and deep learning algorithms is that their outputs can be influenced by their inherent randomness. Consider the four portraits below, generated by the Midjourney bot. 
+One of the challenges for research projects employing machine learning and deep learning algorithms is that outputs can be influenced by the randomness that is inherent in these approaches. Consider the four portraits below, generated by the Midjourney bot. 
 
 ![](images/DL_bkg.png){fig-alt="Four portraits rendered by generative AI. Each portrait looks broadly similar, but there are noticeable differences in facial features and the abstract patterns overlaid on the portraits" fig-align="center"}
 
@@ -287,7 +287,7 @@ arr2 = np.random.rand(3,2)
 
 Here, the values of `arr1` and `arr2` will be different each time we run the code since the seed value was not set and is therefore changing over time. 
 
-This short code demonstrates how randomness that can be controlled by the seed value may affect your code. Therefore, unless randomness is required, e.g., to get some uncertainty in the results, setting the seed value will contribute to making your work reproducible. I also find it helpful to document the seed number I use in my code so that I can easily reproduce my findings in the future. If you are currently working on some code that involves random number generators, it might be worth checking your code and making all necessary changes. In our work (see code chunk 9 in [the Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb)) we set the `seed value` in a general way, using a framework (config) so that our code always uses the same seed to train our algorithm.
+This short code demonstrates how randomness that can be controlled by the seed value may affect your code. Therefore, unless randomness is required, e.g., to get some uncertainty in the results, setting the seed value will contribute to making your work reproducible. I also find it helpful to document the seed number I use in my code so that I can easily reproduce my findings in the future. If you are currently working on some code that involves random number generators, it might be worth checking your code and making all necessary changes. In our work (see code chunk 9 in [the Jupyter notebook](https://github.com/dsvanidze/replicability/blob/master/notebooks/main.ipynb)) we set the seed value in a general way, using a framework (config) so that our code always uses the same seed to train our algorithm.
 
 ## Conclusion
 We hope you have enjoyed learning more about our quest for reproducibility. We have explained why reproducibility matters and provided tips for how to achieve it -- or, at least, work towards it. We have introduced a few important issues that you are likely to encounter on your own path to reproducibility. In sum, we have mentioned:
