--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!how-do-people-feel-about-ai.qmd"
+    - "!road-to-reproducible-research.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/06/13/how-do-people-feel-about-ai.qmd">
+<a href="/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## How do people feel about AI? Well, it's complicated
-A new survey from the Ada Lovelace Institute and the Alan Turing Institute finds broadly positive views towards AI use cases in healthcare and border security, among others, but people are also concerned about the dangers of overreliance on the technologies and a lack of clarity around accountability.
+## The road to reproducible research: hazards to avoid and tools to get you there safely
+The road to reproducibility can be a tricky one to navigate, as Davit Svanidze discovered when he set about making his bachelor's thesis reproducible. If you are thinking of walking a similar path, start here.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/06/13/images/andy-kelly-0E_vhMVqL9g-unsplash.png)
+![](case-studies/posts/2023/06/15/images/computer-intro.png)
 :::
 :::
 
@@ -170,27 +170,14 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## This feels like a brand-new capability – an interface with unstructured information. Historically, you have to turn text into something, and then turn something back into text, if you want to have this interface with humans. Now, we’ve got this elegant way of plugging the gaps.
-Data science leaders on the transformative impact of ChatGPT 
+## ChatGPT isn’t even close to the sort of artificial superintelligence that might conceivably pose a threat to humankind. The models underpinning it are slow learners that require immense volumes of data to construct anything akin to the versatile concepts humans can concoct from only a few examples.
+Michael Timothy Bennett challenges the 'AI doomsayer' narrative 
 
 ::: {.button}
-[Join the discussion](careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
+[Read the article](viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd)
 :::
 
 :::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="ideas/index.qmd">
-
-## Data Science Ideas
-</a> 
-
-::: {#ideas}
-:::
-
 :::
 :::
 
@@ -207,16 +194,29 @@ Data science leaders on the transformative impact of ChatGPT
 :::
 :::
 
+::: {.content-container}
+::: {.listing-block}
+<a href="ideas/index.qmd">
+
+## Data Science Ideas
+</a> 
+
+::: {#ideas}
+:::
+
+:::
+:::
+
 ::: {.pullout-text}
 ::: {.pullout-container}
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## [Laws and regulations] are important, they’re necessary, but they’re insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people who can see something and sound the alarm and go, ‘Wait a minute, hang on. That’s not okay.’
-Stephanie Hare on why we need a culture of technology ethics
+## For me, the question is not, ‘Do we understand how ChatGPT works?’ We don’t understand how humans work, and surely we’re trying to develop something that enhances human thinking in some way. The more important question is, ‘How do we know that what is produced is useful?’
+Data science leaders discuss large language models
 
 ::: {.button}
-[Listen to the interview](viewpoints/interviews/posts/2023/04/28/stephanie-hare.qmd)
+[Join the debate](careers/posts/2023/05/18/chatgpt-data-science-pt2.html)
 :::
 
 :::
