--- a/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -7,6 +7,7 @@ categories:
   - Biographies
 author: Editorial Board
 date: 10/18/2022
+date-modified: 06/15/2023
 toc: false
 image: images/team.png
 image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
@@ -34,6 +35,16 @@ I am a writer and editor with 20 years of experience covering the research and d
 I am the founder and owner of Bays Consulting. I trained as an engineer and took a PhD in Bayesian belief networks, and have worked in data analytics ever since. Or to put it another way, I have made a living out of finding patterns. I am the vice-president for education and statistical literacy at the RSS, officially one of the [World’s Most Interesting Mathematicians](https://ima.org.uk/12382/worlds-most-interesting-mathematician-2019-dr-sophie-carr/) and was a member of the first cohort of data scientists to achieve the new, defined standard of professionalism award from the [Alliance for Data Science Professionals](https://alliancefordatascienceprofessionals.com/). 
 
 I am delighted to be chairing the editorial board of the new data science project from the RSS and am excited to be a part of this project as it evolves into a key resource for all data science practitioners and leaders. To make this a place that helps everyone learn and develop within this field, I'd like to encourage all practitioners, no matter what stage of their career, to submit the type of resource they learn best from (whether that be an article, some code, a data set, a case study or a problem/exercise to solve) on a topic that is important to them – from ethics to analysis plans through to tips on how code. Whatever it is you're working on that you care about, I'd like to ask you to become an active part of the wonderful community of data scientists by sharing your knowledge.
+
+**Yaxin Bi**
+
+::: {.column-margin}
+![](images/Yaxin.png)
+:::
+
+I am a reader in the Artificial Intelligence Research Centre, School of Computing at Ulster University, UK. My research interests include machine learning, data science and ensemble methods underpinned with the Dempster-Shafer theory of evidence. I have led on developing data analytics for anomaly/change detection within satellite data, as well as text analytics for document categorisation and sentiment analysis. I have served a number of international conferences as general chair and technical program committee chair. I am an associate editor for the *International Journal of Intelligence Systems* and a core steering committee member for the series of International Conference on Knowledge Science, Engineering and Management.  
+
+As a member of this editorial board, I am passionate about contributing my expertise to the development of data science and its real-world applications. I look forward to sharing my experience with others in the data science community, in particular to address ethical challenges posed by large language models and to inspire new curriculum development in the field of data science. 
 
 **Sayma Chowdhury**
 
