change 'footnotes' to 'references'

--- a/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
+++ b/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
@@ -12,7 +12,8 @@ date: 06/15/2023
 toc: true
 image: images/computer-intro.png
 image-alt: A young man sits in front of a computer keyboard, surrounded by monitors and books and with computer cables covering various surfaces.
-section-title-footnotes: References
+language: 
+    section-title-footnotes: References
 ---
 Reproducibility, or “[the ability of a researcher to duplicate the results of a prior study using the same materials as the original investigator](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”, is critical for sharing and building upon scientific findings. Reproducibility not only verifies the correctness of processes leading to results but also serves as a prerequisite for assessing generalisability to other datasets or contexts. This we refer to as replicability, or “[the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but new data are collected](https://www.nsf.gov/sbe/AC_Materials/SBE_Robust_and_Reliable_Research_Report.pdf)”. Reproducibility, which is the focus of our work here, can be challenging -- especially in the context of deep learning. This article, and associated material, aims to provide practical advice for overcoming these challenges. 
 
