fixed rss feed urls

--- a/feeds.qmd
+++ b/feeds.qmd
@@ -9,13 +9,13 @@ title-block-banner: true
 [realworlddatascience.net/latest-content.xml](https://realworlddatascience.net/latest-content.xml)
 
 ### Case studies
-[realworlddatascience.net/case-studies/index.xml](realworlddatascience.net/careers/index.xml)
+[realworlddatascience.net/case-studies/index.xml](https://realworlddatascience.net/careers/index.xml)
 
 ### Ideas
 [realworlddatascience.net/ideas/index.xml](https://realworlddatascience.net/ideas/index.xml)
 
 ### Careers
-[realworlddatascience.net/careers/index.xml](realworlddatascience.net/careers/index.xml)
+[realworlddatascience.net/careers/index.xml](https://realworlddatascience.net/careers/index.xml)
 
 ### Viewpoints
 [realworlddatascience.net/viewpoints/index.xml](https://realworlddatascience.net/viewpoints/index.xml)
