--- a/feeds.qmd
+++ b/feeds.qmd
@@ -9,7 +9,7 @@ title-block-banner: true
 [realworlddatascience.net/latest-content.xml](https://realworlddatascience.net/latest-content.xml)
 
 ### Case studies
-[realworlddatascience.net/case-studies/index.xml](https://realworlddatascience.net/careers/index.xml)
+[realworlddatascience.net/case-studies/index.xml](https://realworlddatascience.net/case-studies/index.xml)
 
 ### Ideas
 [realworlddatascience.net/ideas/index.xml](https://realworlddatascience.net/ideas/index.xml)
