--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!road-to-reproducible-research.qmd"
+    - "!chanuki-seresinhe.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd">
+<a href="/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## The road to reproducible research: hazards to avoid and tools to get you there safely
-The road to reproducibility can be a tricky one to navigate, as Davit Svanidze discovered when he set about making his bachelor's thesis reproducible. If you are thinking of walking a similar path, start here.
+## 'Once I started to see what was possible with data science, there was no going back'
+Chanuki Seresinhe is head of data science at Zoopla and Hometrack. This is her career story so far -- from researching beautiful places to helping web users buy, sell and rent property spaces.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2023/06/15/images/computer-intro.png)
+![](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
 :::
 :::
 
