--- a/index.qmd
+++ b/index.qmd
@@ -131,7 +131,7 @@ toc: false
 Chanuki Seresinhe is head of data science at Zoopla and Hometrack. This is her career story so far -- from researching beautiful places to helping web users buy, sell and rent property spaces.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
+![](careers/career-profiles/posts/2023/06/20/images/chanuki-seresinhe.png)
 :::
 :::
 
@@ -183,12 +183,12 @@ Michael Timothy Bennett challenges the 'AI doomsayer' narrative
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/index.qmd">
+<a href="ideas/index.qmd">
 
-## Data Science Careers 
-</a>
+## Data Science Ideas
+</a> 
 
-::: {#careers}
+::: {#ideas}
 :::
 
 :::
@@ -196,12 +196,12 @@ Michael Timothy Bennett challenges the 'AI doomsayer' narrative
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Data Science Ideas
-</a> 
+## Interviews 
+</a>
 
-::: {#ideas}
+::: {#interviews}
 :::
 
 :::
@@ -225,12 +225,12 @@ Data science leaders discuss large language models
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="careers/index.qmd">
 
-## Interviews 
+## Data Science Careers 
 </a>
 
-::: {#interviews}
+::: {#careers}
 :::
 
 :::
