--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -7,32 +7,59 @@ title-block-banner: true
 embed-resources: true
 ---
 ## Legal disclaimer
-Statements of fact and opinion published on this website are those of the respective authors and contributors and not of Real World Data Science (RWDS), its editors, the Royal Statistical Society (RSS), or other partners and funders. 
+Statements of fact and opinion published on this website are those of the respective authors and contributors and not necessarily those of Real World Data Science (RWDS), its editors, the Royal Statistical Society (RSS), or other partners and funders. 
 
-Neither RWDS, its editors, the RSS, nor other partners and funders make any representation, express or implied, in respect of the accuracy of the material in this publication and cannot accept any legal responsibility or liability for any errors or omissions that may be made. 
+RWDS has prepared the content of this website responsibly and carefully. However, RWDS, its editors, the RSS, or other partners and funders disclaim all warranties, express or implied, as to the accuracy of the information contained in any of the materials on this website or on other linked websites or on any subsequent links. This includes, but is not by way of limitation: 
 
-RWDS, its editors, the RSS, or other partners and funders shall not be liable for any losses or damages (including without limitation consequential loss or damage) whatsoever from the use of, or reliance on, the information in this website, or from the use of the internet generally. Links to other websites or the publication of advertisements do not constitute an endorsement or an approval by RWDS, its editors, the RSS, or other partners and funders.
+- any implied warranties of merchantability and fitness for a particular purpose. 
 
-<!--- To add in, "By using this site you agree to these terms..." - see RSS site for guidance --->
-<!--- To add in, "Jurisdiction is..." - see RSS site --->
+- any liability for damage to your computer hardware, data, information, materials and business resulting from the information or the lack of information available. 
+
+- any errors, omissions, or inaccuracies in the information. 
+
+- any decision made or action taken or not taken in reliance upon the information. 
+
+RWDS, its editors, the RSS, or other partners and funders make no warranty as to the content, accuracy, timeliness or completeness of the information or that the information may be relied upon for any reason and bear no responsibility for the accuracy, content or legality of any linked site or for that of any subsequent links. RWDS, its editors, the RSS, or other partners and funders make no warranty that the website service will be uninterrupted or error-free or that any defects can be corrected. 
+
+RWDS, its editors, the RSS, or other partners and funders shall not be liable for any losses or damages (including without limitation consequential loss or damage) whatsoever from the use of, or reliance on, the information in this website, or from the use of the internet generally. Links to other websites or the publication of advertisements do not constitute an endorsement or an approval by RWDS, its editors, the RSS, or other partners and funders. 
+
+These disclaimers and exclusions shall be governed by and construed in accordance with the laws of England and Wales under the exclusive jurisdiction of the courts of England and Wales. Those who choose to access this site from outside the United Kingdom are responsible for compliance with local laws if and to the extent local laws are applicable. 
+
+By using this site, you agree to these terms and conditions of use.   
 
 ## Site content
 This site and the "Real World Data Science" and "RWDS" brands and logos are copyright &copy; The Royal Statistical Society.
 
-Copyright and licence terms for individual articles, videos, images and other published content are described at the end of each piece of published content. We make every reasonable effort to locate, contact and acknowledge copyright owners and wish to be informed by any copyright owners who are not properly identified and acknowledged on this website so that we may make any necessary corrections.
+Copyright and licence terms for published articles and any associated videos, images, or other material can be found at the end of each article page. We make every reasonable effort to locate, contact and acknowledge copyright owners and wish to be informed by any copyright owners who are not properly identified and acknowledged on this website so that we may make any necessary corrections.
 
 Where licence terms for individual articles, videos, images and other published content permit republication, you may do so in accordance with the stated terms of the respective licence(s).
 
 You are not permitted to republish this site in its entirety.
 
+## What websites do we link to? 
+RWDS editors and contributors recommend external web links on the basis of their suitability and usefulness for our users. Selection and addition of links to our website is entirely a matter for RWDS and for RWDS alone. 
+
+It is not our policy to enter into agreements for reciprocal links. 
+
+The inclusion of a link to an organisation's or individual's website does not constitute an endorsement or an approval by RWDS, its editors, the RSS, or other partners and funders of any product, service, policy or opinion of the organisation or individual. RWDS, its editors, the RSS, or other partners and funders are not responsible for the content of external websites. 
+
+## What websites will we not link to? 
+We will not link to websites that contain racist, sexual or misleading content; that promote violence; that are in breach of any UK law; which are otherwise offensive to individuals or to groups of people. 
+
+The decision of RWDS is final and no correspondence will be entered into. 
+
+If you wish to report a concern, please email b.tarran@rss.org.uk
+
 ## Software and services
-Source code and files for this site are available from [GitHub](https://github.com/realworlddatascience/realworlddatascience.github.io). This site is built using [Quarto](https://quarto.org/), an open-source scientific and technical publishing system developed by [Posit](https://posit.co/). Quarto source code and software licences are available from [GitHub](https://github.com/quarto-dev).
+Source code and files for this site are available from [GitHub](https://github.com/realworlddatascience/realworlddatascience.github.io). Use of our GitHub repository is governed by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct). 
+
+This site is built using [Quarto](https://quarto.org/), an open-source scientific and technical publishing system developed by [Posit](https://posit.co/). Quarto source code and software licences are available from [GitHub](https://github.com/quarto-dev).
 
 Real World Data Science is hosted by [GitHub Pages](https://pages.github.com/). 
 
 This site uses [Google Analytics 4](https://support.google.com/analytics/answer/10089681?hl=en) for web analytics reporting.
 
-User comments and reaction functionality is provided by [giscus](https://giscus.app/), a comments system powered by [GitHub Discussions](https://docs.github.com/en/discussions). Use of this comment functionality is goverened by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct).
+User comments and reaction functionality is provided by [giscus](https://giscus.app/), a comments system powered by [GitHub Discussions](https://docs.github.com/en/discussions). Use of this comment functionality is governed by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct).
 
 ## Notice and Takedown policy
 If you are a rights holder and are concerned that you have found material on our site for which you have not given permission, or is not covered by a limitation or exception in national law, please contact us in writing stating the following:
@@ -112,13 +139,10 @@ decisions when appropriate.
 
 ### Scope
 
-This Code of Conduct applies within all community spaces, and also applies when
-an individual is officially representing the community in public spaces.
-Examples of representing our community include using an official e-mail address,
-posting via an official social media account, or acting as an appointed
-representative at an online or offline event.
+This Code of Conduct applies within all community spaces (encompassing this site, our GitHub repository, our social media channels, and any RWDS-organised online and offline events). It also applies when
+an individual is officially representing the community in public spaces. Examples of representing our community include using an official e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event.
 
-<!--- Clarify scope, e.g. "What is an 'appointed rep', and how does this relate to RSS conduct terms, etc.?" --->
+Note that unless prior permission is agreed in writing with the editor of RWDS, only the editor and editorial board of RWDS may officially represent the community. Comment to the media must only be given by appointed representatives and must be approved by the RSS press office. 
 
 ### Enforcement
 
@@ -194,4 +218,3 @@ For answers to common questions about this code of conduct, see the FAQ at
 [Mozilla CoC]: https://github.com/mozilla/diversity
 [FAQ]: https://www.contributor-covenant.org/faq
 [translations]: https://www.contributor-covenant.org/translations
-
