--- a/careers/career-profiles/posts/2023/06/28/albert-lee.qmd
+++ b/careers/career-profiles/posts/2023/06/28/albert-lee.qmd
@@ -14,7 +14,7 @@ image: images/albert-lee.png
 image-alt: Photo of Albert Lee. Photo supplied by Albert Lee, used with permission.
 toc: false
 ---
-This week, in celebration of Pride, Real World Data Science is collaborating with the [JEDI Organizing Group](https://datascijedi.org/) of the [American Statistical Association](https://www.amstat.org/) (ASA) and the [ASA LGBTQ+ Advocacy Committee](https://sites.google.com/view/asa-lgbtq/home) to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum.
+This week, in celebration of Pride, Real World Data Science is collaborating with the [JEDI Outreach Group](https://datascijedi.org/) of the [American Statistical Association](https://www.amstat.org/) (ASA) and the [ASA LGBTQ+ Advocacy Committee](https://sites.google.com/view/asa-lgbtq/home) to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum.
 
 Members of the committee nominated two individuals to be featured as part of our [career profile](https://realworlddatascience.net/careers/career-profiles/) series, and so we're pleased to bring you interviews with Albert Lee (below) and [Claire Morton](claire-morton.qmd).
 
